Spring Security 설정 추가중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,7 @@ spring:
     init:
       data-locations: classpath:data.sql
       mode: always
+
+app:
+  jwtSecret: secret
+  jwtExpiration: 3600000
