--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
