--- a/dashboard-ui/package.json
+++ b/dashboard-ui/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "history": "^5.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
